Fix the issue on mobile version in "more features" area

--- a/CLARIO Public SIte/assets/css/style.css
+++ b/CLARIO Public SIte/assets/css/style.css
@@ -244,9 +244,7 @@ img{
     position: relative;
 }
 
-#hide-me{
-    visibility: hidden;
-}
+
 
 
 /*** Buttons ***/
